[project]
name = "app"
version = "0.6"
description = "🎀A simple and practical CMS implememted by flask"
requires-python = ">=3.9,<3.14"
author = ["sunlin92 <sun.melodies@gmail.com>"]

[tool.poetry.source]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
Flask = "3.1.0"
Flask_JWT_Extended = "4.7.1"
Flask_SQLAlchemy = "3.1.1"
WTForms = "3.2.1"
tablib = "3.8.0"
spectree = "1.4.5"
pillow = "^11.1.0"
flask-cors = "^5.0.1"
gunicorn = "^23.0.0"
gevent = "^24.1.1"
flask-socketio = "^5.5.1"
blinker = "^1.9.0"
python-dotenv = "^1.0.1"
gevent-websocket = "^0.10.1"
pydantic = {extras = ["email"], version = "^1.10.21"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
watchdog = "^6.0.0"
coverage = "^7.6.12"
pytest = "^8.3.5"
pre-commit = "^4.1.0"
pytest-order = "^1.3.0"
flake8= "^7.1.2"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 120
use_parentheses = true
include_trailing_comma = true

[tool.black]
line_length = 120

[tool.mypy]
files = ["starter.py"]
ignore_missing_imports=true

[tool.pytest]
testpaths=["tests"]
