[project]
name = "app"
version = "0.6"
description = "🎀A simple and practical CMS implememted by flask"
requires-python = ">=3.10,<3.15"
authors = [
    {name = "sunlin92", email = "sun.melodies@gmail.com"}
]
dependencies = [
    "Flask==3.1.3",
    "Flask-JWT-Extended==4.7.1",
    "Flask-SQLAlchemy==3.1.1",
    "WTForms==3.2.1",
    "tablib==3.9.0",
    "spectree==2.0.1",
    "pillow>=11.1.0",
    "flask-cors>=6.0.2",
    "gunicorn>=25.3.0",
    "gevent>=25.9.1",
    "blinker>=1.9.0",
    "python-dotenv>=1.0.1",
    "pydantic[email]>=2.12.5,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "watchdog>=6.0.0",
    "coverage>=7.6.12",
    "pytest>=8.3.5",
    "pre-commit>=4.1.0",
    "pytest-order>=1.3.0",
    "flake8>=7.1.2",
    "mypy>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 120
use_parentheses = true
include_trailing_comma = true

[tool.black]
line_length = 120

[tool.mypy]
files = ["starter.py"]
ignore_missing_imports = true

[tool.pytest]
testpaths = ["tests"]
